--- a/src/pages/Inward/Inward.css
+++ b/src/pages/Inward/Inward.css
@@ -2,3 +2,26 @@ h2 {
     color: #808080;
     font-weight: 100;
   }
+
+  .inwardItemDetails {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+    .popup-overlay {
+      position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+        z-index: 9999;
+        /* Additional styles for the popup */
+        /* Adjust width, height, colors, etc. as needed */
+        width: 1000px;
+        max-width: 90%;
+        height: 500px;
+    }
