--- a/src/pages/Inward/Inward.css
+++ b/src/pages/Inward/Inward.css
@@ -41,3 +41,9 @@ h2 {
           padding: 10px;
           position: absolute;
         }
+
+        .spaceInBetween{
+          display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
